<resources>
    <string name="app_name">BWA Wisata</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="populer">Populer</string>
    <string name="populer_desc">Lebih mudah untuk melihat wisata\nyang banyak dikunjungi</string>
    <string name="pre_sale">Pre-Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan akan\nwisata terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk transaksi\ntiket wisata</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Welcome,\n Yohanes Wijaya</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="now_populer">Now Populer</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="tiket">Tiket</string>
    <string name="pilih_tiket">Pilih Tiket</string>
    <string name="wisata">Wisata</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="tambah_tiket">Tambah Tiket</string>
    <string name="tiket_anak">Tiket Anak - Anak</string>
    <string name="tiket_dewasa">Tiket Dewasa</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="tanggal">Tanggal</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date">Date</string>
    <string name="tiket_wisata">Tiket Wisata</string>
    <string name="tiket_1">Tiket 1</string>
    <string name="tiket_2">Tiket 2</string>
    <string name="total_yang_harus_dibayar">Total yang harus dibayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="happy_holiday">Happy Holiday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>